Implement Strategy design pattern
* Prepare tests to introduce the concept of strategy
* Add YatzyCategory enum
* Add ScoringStrategy interface
* Create the different strategies by implementing said interface
* Reorganize the code base so that every file is where it's supposed to
  be
* Set the release version of the maven compiler to 22 in order to use
  the latest syntax updates